--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,7 +5,7 @@ h1 {
     font-size: 50px;
 }
 
-h6 {
-    letter-spacing: 2px;
-    font-size: 20px;
+p {
+    letter-spacing: 3px;
+    font-size: 18px;
 }
